--- a/translation/source/activity.xml
+++ b/translation/source/activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
   <string name="activity">Activity</string>
-  <string name="hosted">Hosted</string>
+  <string name="hostedX">Hosted %s</string>
   <string name="aLiveStream">a live stream</string>
   <plurals name="supportedNbMonths">
     <item quantity="one">Supported lichess.org for %1$s month as a %2$s</item>
