--- a/translation/dest/arena/lv-LV.xml
+++ b/translation/dest/arena/lv-LV.xml
@@ -3,9 +3,9 @@
 <resources>
   <string name="isItRated">Vai tas ir vērtēts?</string>
   <string name="willBeNotified">Saņemsiet paziņojumu, kad turnīrs sāksies, tāpēc gaidot varat droši spēlēt citā cilnē.</string>
-  <string name="isRated">Šis ir reitinga turnīrs un ietekmēs tavu reitingu.</string>
-  <string name="isNotRated">Šis *nav* reitinga turnīrs un *neietekmēs* tavu reitingu.</string>
-  <string name="someRated">Daži turnīri ir ar reitingu un ietekmēs tavu reitingu.</string>
+  <string name="isRated">Šis ir vērtēts turnīrs un ietekmēs jūsu reitingu.</string>
+  <string name="isNotRated">Šis turnīrs *nav* vērtēts un *neietekmēs* jūsu reitingu.</string>
+  <string name="someRated">Daži turnīri ir vērtēti un ietekmēs jūsu reitingu.</string>
   <string name="howAreScoresCalculated">Kā tiek aprēķināti rezultāti?</string>
   <string name="howAreScoresCalculatedAnswer">Par uzvaru piešķir 2 punktus, par neizšķirtu - 1 punktu un par zaudējumu - nevienu.
 Ja uzvarēsiet divas spēles pēc kārtas, sāksies divkāršo punktu sērija, ko attēlo ar liesmas ikonu.
