--- a/translation/dest/search/pl-PL.xml
+++ b/translation/dest/search/pl-PL.xml
@@ -4,24 +4,30 @@
   <string name="search">Szukaj</string>
   <string name="advancedSearch">Wyszukiwanie zaawansowane</string>
   <plurals name="searchInXGames">
-    <item quantity="one">Szukaj w %s grze szachowej</item>
+    <item quantity="one">Szukaj w jednej partii</item>
     <item quantity="few">Szukaj wśród %s partii</item>
     <item quantity="many">Szukaj wśród %s partii</item>
     <item quantity="other">Szukaj wśród %s partii</item>
   </plurals>
+  <plurals name="xGamesFound">
+    <item quantity="one">Znaleziono jedną partię</item>
+    <item quantity="few">Znaleziono %s partie</item>
+    <item quantity="many">Znaleziono %s partii</item>
+    <item quantity="other">Znaleziono %s partii</item>
+  </plurals>
   <string name="opponentName">Nazwa przeciwnika</string>
-  <string name="loser">Przegrywający</string>
+  <string name="loser">Przegrany</string>
   <string name="from">Od</string>
   <string name="to">Do</string>
   <string name="humanOrComputer">Przeciwnik był człowiekiem czy komputerem</string>
   <string name="aiLevel">Poziom A.I.</string>
   <string name="source">Źródło</string>
-  <string name="nbTurns">Ilość rund</string>
+  <string name="nbTurns">Liczba ruchów</string>
   <string name="result">Wynik</string>
   <string name="winnerColor">Kolor zwycięzcy</string>
   <string name="date">Data</string>
-  <string name="sort">Sortuj</string>
-  <string name="by">Autor</string>
+  <string name="sort">Sortowanie</string>
+  <string name="by">Po</string>
   <string name="order">Kolejność</string>
   <string name="analysis">Analiza</string>
   <string name="onlyAnalysed">Tylko partie z dostępną analizą komputerową</string>
