--- a/translation/dest/site/da-DK.xml
+++ b/translation/dest/site/da-DK.xml
@@ -534,12 +534,12 @@
   <string name="privacy">Privat</string>
   <string name="letOtherPlayersFollowYou">Lad andre spillere følge dig</string>
   <string name="letOtherPlayersChallengeYou">Lad andre spillere udfordre dig</string>
-  <string name="letOtherPlayersInviteYouToStudy">Lad andre spillere inviterer dig til at studere</string>
+  <string name="letOtherPlayersInviteYouToStudy">Lad andre spillere invitere dig til at studere</string>
   <string name="sound">Lyd</string>
   <string name="none">Ingen</string>
-  <string name="fast">Hurtigt</string>
-  <string name="normal">Normalt</string>
-  <string name="slow">Langsomt</string>
+  <string name="fast">Hurtig</string>
+  <string name="normal">Normal</string>
+  <string name="slow">Langsom</string>
   <string name="insideTheBoard">På brættet</string>
   <string name="outsideTheBoard">Uden for brættet</string>
   <string name="onSlowGames">I langsomme spil</string>
@@ -562,7 +562,7 @@
   <string name="starting">Begynder:</string>
   <string name="allInformationIsPublicAndOptional">Al information er offentlig og valgfri.</string>
   <string name="yourCityRegionOrDepartment">Din by, region eller provins</string>
-  <string name="biographyDescription">Fortæl om dig selv, hvad kan du lide ved skak, dine favoritåbninger, spil, spillere…</string>
+  <string name="biographyDescription">Fortæl om dig selv, dine interesser, hvad kan du lide ved skak, dine favoritåbninger, spillere, ...</string>
   <plurals name="maximumNbCharacters">
     <item quantity="one">Maximum: %s tegn.</item>
     <item quantity="other">Maximum: %s tegn.</item>
@@ -693,8 +693,8 @@
   <string name="withEverybody">Med alle</string>
   <string name="youHaveAlreadyRegisteredTheEmail">Du har allerede registreret Email adressen: %s</string>
   <string name="kidMode">Børnetilstand</string>
-  <string name="kidModeExplanation">Dette handler om sikkerhed. I børnetilstand, er alt kommunikation deaktiveret. Aktiver hvis du vil beskytte dine børn eller skolebørn fra at kunne kommunikere med andre internetbrugere.</string>
-  <string name="inKidModeTheLichessLogoGetsIconX">I børnetilstand, vil lichess-logoet få et %s ikon, så du ved at dine børn er sikret.</string>
+  <string name="kidModeExplanation">Dette angår sikkerhed. I børnetilstand er alt kommunikation deaktiveret. Aktivér hvis du vil beskytte dine børn eller skolebørn fra at kunne kommunikere med andre internetbrugere.</string>
+  <string name="inKidModeTheLichessLogoGetsIconX">I børnetilstand vil Lichess-logoet få et %s ikon, så du ved, at dine børn er sikret.</string>
   <string name="enableKidMode">Aktiver børnetilstand</string>
   <string name="disableKidMode">Deaktiver børnetilstand</string>
   <string name="security">Sikkerhed</string>
