--- a/translation/dest/site/ko-KR.xml
+++ b/translation/dest/site/ko-KR.xml
@@ -25,7 +25,7 @@
   <string name="youPlayTheWhitePieces">당신은 백으로 둡니다</string>
   <string name="youPlayTheBlackPieces">당신은 흑으로 둡니다</string>
   <string name="itsYourTurn">당신이 둘 차례입니다!</string>
-  <string name="kingInTheCenter">왕이 중앙에 도달함</string>
+  <string name="kingInTheCenter">킹이 중앙에 도달함</string>
   <string name="threeChecks">세 번의 체크</string>
   <string name="raceFinished">경주 완료</string>
   <string name="variantEnding">변형 게임 엔딩</string>
@@ -71,7 +71,7 @@
   <string name="variantWin">변형 체스에서 승리</string>
   <string name="insufficientMaterial">말이 부족하여 무승부입니다.</string>
   <string name="pawnMove">폰 이동</string>
-  <string name="capture">잡는 수</string>
+  <string name="capture">Capture</string>
   <string name="close">닫기</string>
   <string name="winning">이기는 수</string>
   <string name="losing">지는 수</string>
@@ -95,7 +95,7 @@
   <string name="xOpeningExplorer">%s 오프닝 탐색기</string>
   <string name="winPreventedBy50MoveRule">50수 규칙에 의하여 승리가 불가능합니다.</string>
   <string name="lossSavedBy50MoveRule">50수 규칙에 의하여 패배가 불가능합니다.</string>
-  <string name="allSet">적용</string>
+  <string name="allSet">모든 설정 완료!</string>
   <string name="importPgn">PGN 가져오기</string>
   <string name="delete">삭제</string>
   <string name="deleteThisImportedGame">가져온 게임을 삭제할까요?</string>
@@ -519,7 +519,7 @@
   <string name="xAskedY">%1$s가 질문을 남겼습니다: %2$s</string>
   <string name="xAnsweredY">%1$s가 답변을 남겼습니다: %2$s</string>
   <string name="xCommentedY">%1$s가 댓글을 남겼습니다: %2$s</string>
-  <string name="victory">승리!</string>
+  <string name="victory">승리</string>
   <string name="defeat">패배</string>
   <string name="victoryVsYInZ">%1$s: %2$s / %3$s</string>
   <string name="defeatVsYInZ">%1$s: %2$s / %3$s</string>
@@ -653,7 +653,7 @@
   <string name="youHaveAlreadyRegisteredTheEmail">이 계정은 이미 해당 주소로 연결 되어 있습니다: %s</string>
   <string name="kidMode">어린이 모드</string>
   <string name="kidModeExplanation">안전을 위해 그런것입니다. 아이 모드에서는 모든 통신이 비활성화됩니다. 당신의 아이들이나 학생들을 다른 인터넷 사용자들에서 보호하게 이 모드를 키십시오.</string>
-  <string name="inKidModeTheLichessLogoGetsIconX">아이 모드에서sms lichess 로고가 %s 아이콘이 뜨기 때문에 안심하셔도 됩니다.</string>
+  <string name="inKidModeTheLichessLogoGetsIconX">아이 모드에서는 lichess 로고가 %s 아이콘이 뜨기 때문에 안심하셔도 됩니다.</string>
   <string name="enableKidMode">아이 모드 활성화하기</string>
   <string name="disableKidMode">아이 모드 비활성화하기</string>
   <string name="security">보안</string>
@@ -772,7 +772,16 @@
     <item quantity="other">%s 종류의 조건 수를 설정</item>
   </plurals>
   <string name="sorry">죄송합니다 :(</string>
+  <string name="why">왜 그런가요?</string>
+  <string name="pleasantChessExperience">우리는 모두에게 즐거운 체스 경험을 제공하는 것을 목표로 합니다.</string>
+  <string name="goodPractice">그러기 위해서는, 우리는 모든 플레이어가 좋은 관행을 따르도록 보장해야 합니다.</string>
+  <string name="potentialProblem">잠재적인 문제가 감지되었을 때는, 우리는 이 메시지를 표시합니다.</string>
+  <string name="howToAvoidThis">이것을 어떻게 피할 수 있나요?</string>
+  <string name="playEveryGame">시작한 모든 게임을 플레이하세요.</string>
+  <string name="tryToWin">당신이 플레이하는 모든 게임에서 이기도록 (아니면 적어도 비기도록) 노력하세요.</string>
+  <string name="resignLostGames">패배한 게임에서는 기권하세요(시간이 흐르게 두지 마세요).</string>
   <string name="temporaryInconvenience">일시적인 불편에 사과드리며,</string>
   <string name="wishYouGreatGames">lichess.org에서 좋은 게임 즐기시기 바랍니다.</string>
   <string name="thankYouForReading">읽어 주셔서 감사합니다!</string>
+  <string name="edit">편집</string>
 </resources>
