--- a/translation/dest/site/mn-MN.xml
+++ b/translation/dest/site/mn-MN.xml
@@ -35,8 +35,8 @@
   <string name="whitePlays">Цагааны нүүх ээлж</string>
   <string name="blackPlays">Харын нүүх ээлж</string>
   <plurals name="opponentLeftCounter">
-    <item quantity="one">Таны өрсөлдөгч тоглолтыг орхисон. Та % s секундын дотор ялалтыг хүсч болно .</item>
-    <item quantity="other">Таны өрсөлдөгч тоглолтыг орхисон. Та % s секундын дотор ялалтыг хүсч болно .</item>
+    <item quantity="one">Таны өрсөлдөгч тоглолтыг орхисон. Та %s секундын дотор ялалтыг хүсч болно.</item>
+    <item quantity="other">Таны өрсөлдөгч тоглолтыг орхисон. Та %s секундын дотор ялалтыг хүсч болно.</item>
   </plurals>
   <string name="opponentLeftChoices">Таны өрсөлдөгч тоглолтыг орхисон байна. Та ялалтыг шууд авах эсвэл өрсөлдөгчөө эргэж тоглолтод орж ирэхийг хүлээж болно.</string>
   <string name="makeYourOpponentResign">Хүчээр ялалтыг авах</string>
@@ -207,7 +207,7 @@
   <string name="playingRightNow">Яг одоо тоглож байна</string>
   <string name="eventInProgress">Энэ мөчид тэмцээн, нэгэн зэрэг үзэсгэлэн буюу үйл явдал үргэлжилж байгааг харуулж байна.</string>
   <string name="finished">Өндөрлөсөн тэмцээнүүд</string>
-  <string name="finishesX">% s дуусна</string>
+  <string name="finishesX">%s дуусна</string>
   <string name="abortGame">Өргийг цуцлах</string>
   <string name="gameAborted">Өрөг цуцлагдлаа</string>
   <string name="standard">Стандарт</string>
@@ -278,8 +278,8 @@
   <string name="tournaments">Тэмцээнүүд</string>
   <string name="tournamentPoints">Тэмцээний оноо</string>
   <plurals name="nbStudies">
-    <item quantity="one">судалгаа</item>
-    <item quantity="other">% s судалгаа</item>
+    <item quantity="one">%s судалгаа</item>
+    <item quantity="other">%s судалгаа</item>
   </plurals>
   <string name="viewTournament">Тэмцээн үзэх</string>
   <string name="backToTournament">Тэмцээний үндсэн хуудас руу эргэж орох</string>
