--- a/translation/source/coach.xml
+++ b/translation/source/coach.xml
@@ -4,6 +4,7 @@
   <string name="lichessCoach">Lichess coach</string>
   <string name="areYouCoach">Are you a great chess coach with a %s?</string>
   <string name="nmOrFideTitle">NM or FIDE title</string>
+  <string name="confirmTitle">Confirm your title here and we will review your application.</string>
   <string name="sendApplication">Send us an email at %s and we will review your application.</string>
   <string name="location">Location</string>
   <string name="languages">Languages</string>
