--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -840,4 +840,6 @@ computer analysis, game chat and shareable URL.</string>
   <string name="agreementPolicy">I agree that I will follow all Lichess policies.</string>
   <string name="searchOrStartNewDiscussion">Search or start new conversation</string>
   <string name="edit">Edit</string>
+  <string name="rapid">Rapid</string>
+  <string name="classical">Classical</string>
 </resources>
