--- a/translation/source/tourname.xml
+++ b/translation/source/tourname.xml
@@ -34,9 +34,16 @@
   <string name="yearlyClassical">Yearly Classical</string>
   <string name="yearlyXArena">Yearly %s Arena</string>
   <string name="yearlyX">Yearly %s</string>
+  <string name="rapidShieldArena">Rapid Shield Arena</string>
+  <string name="rapidShield">Rapid Shield</string>
+  <string name="classicalShieldArena">Classical Shield Arena</string>
+  <string name="classicalShield">Classical Shield</string>
   <string name="xShieldArena">%s Shield Arena</string>
   <string name="xShield">%s Shield</string>
   <string name="openingRapidArena">%s Rapid Arena</string>
   <string name="openingRapid">%s Rapid</string>
-  <string name="teamBattle">%s Team Battle</string>
+  <string name="xTeamBattle">%s Team Battle</string>
+  <string name="eliteXArena">Elite %s Arena</string>
+  <string name="eliteX">Elite %s</string>
+  <string name="xArena">%s Arena</string>
 </resources>
