--- a/translation/dest/site/nl-NL.xml
+++ b/translation/dest/site/nl-NL.xml
@@ -430,7 +430,7 @@ een computeranalyse, een chatbox bij de partij en een deelbare URL.</string>
   <string name="tournamentPairingsAreNowClosed">De toernooikoppelingen zijn nu gesloten.</string>
   <string name="standByX">Sta klaar %s, spelers worden gekoppeld, maak je gereed!</string>
   <string name="youArePlaying">Je bent aan het spelen!</string>
-  <string name="winRate">Overwinningspercentage</string>
+  <string name="winRate">Winstpercentage</string>
   <string name="berserkRate">Berserk-percentage</string>
   <string name="performance">Prestatie</string>
   <string name="tournamentComplete">Toernooi voltooid</string>
